--- a/tidy/app/src/main/res/layout/fragment_add_tasks.xml
+++ b/tidy/app/src/main/res/layout/fragment_add_tasks.xml
@@ -10,6 +10,16 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/broom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/addTasksTitle"
             android:layout_width="wrap_content"
@@ -23,144 +33,124 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:id="@+id/spaceIDInfo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/addTasksTitle"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="80dp"
+            android:layout_marginTop="50dp"
             android:gravity="center"
-            android:layout_marginTop="20dp">
-            <TextView
-                android:id="@+id/spaceIdName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/spaceID"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
-            <TextView
-                android:id="@+id/spaceIdHolder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4sp"
-                android:hint="@string/invalid"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/broom"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/dropDowns"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="50dp"
             android:orientation="vertical"
-            android:layout_marginTop="100dp"
-            app:layout_constraintTop_toBottomOf="@+id/spaceIDInfo">
-
-            <com.google.android.material.textfield.TextInputLayout
-                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            app:layout_constraintTop_toBottomOf="@+id/addTasksTitle"
+            app:layout_constraintEnd_toEndOf="parent">
+            <LinearLayout
+                android:id="@+id/spaceIDInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="1dp">
-
-                <AutoCompleteTextView
-                    android:id="@+id/addTasksDropdown"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/task_name" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="1dp"
-                app:layout_constraintTop_toBottomOf="@+id/taskRoom">
-
-                <AutoCompleteTextView
-                    android:id="@+id/addRoomsDropdown"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/room" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <EditText
-                android:id="@+id/taskDescription"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/addTasksTitle"
                 android:gravity="center"
-                android:hint="@string/task_description"
-                android:inputType="textLongMessage"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
-                android:importantForAutofill="no" />
+                android:layout_marginTop="20dp">
+                <TextView
+                    android:id="@+id/spaceIdName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/spaceID"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/spaceIdHolder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4sp"
+                    android:hint="@string/invalid"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
-        </LinearLayout>
 
 
-        <FrameLayout
-            android:id="@+id/frameLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/dropDowns">
+            <LinearLayout
+                android:id="@+id/dropDowns"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="50dp"
+                android:orientation="vertical"
+                android:layout_marginTop="100dp"
+                app:layout_constraintTop_toBottomOf="@+id/spaceIDInfo">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="1dp">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/addTasksDropdown"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/task_name" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="1dp"
+                    app:layout_constraintTop_toBottomOf="@+id/taskRoom">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/addRoomsDropdown"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="@string/room" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <EditText
+                    android:id="@+id/taskDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:gravity="center"
+                    android:hint="@string/task_description"
+                    android:inputType="textLongMessage"
+                    android:textSize="16sp"
+                    app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
+                    android:importantForAutofill="no" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/AddClearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
                 <Button
                     android:id="@+id/AddTaskButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginEnd="20dp"
-                    android:text="@string/add_tasks"
+                    android:layout_weight="1"
+                    android:text="@string/add"
+                    android:paddingVertical="20dp"
                     android:textSize="20sp" />
 
                 <Button
                     android:id="@+id/ClearTasksButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginEnd="20dp"
+                    android:layout_weight="1"
                     android:text="@string/clear"
+                    android:paddingVertical="20dp"
                     android:textSize="20sp" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/UpdateLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="gone">
-
-                <Button
-                    android:id="@+id/UpdateTasksButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/update_tasks"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-        </FrameLayout>
+        </LinearLayout>
 
 
 
